[project]
name = "caldav-server-tester"
dynamic = ["version"]
license = {text = "AGPL-3.0-or-later"}
description = "CalDAV Server Checker - checking a CalDAV server for compatibility issues"
authors = [
    {name = "Tobias Brox", email = "tobias@redpill-linpro.com"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Office/Business :: Scheduling",
]
keywords = ["caldav", "calendar", "testing", "compatibility", "server"]
dependencies = [
    "caldav>=1.5.0",
    "click",
    "icalendar",
]

[project.urls]
Repository = "https://github.com/python-caldav/caldav-server-tester"
Issues = "https://github.com/python-caldav/caldav-server-tester/issues"

[project.scripts]
caldav-server-tester = "caldav_server_tester:check_server_compatibility"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14",
    "pre-commit>=4.0",
    "deptry>=0.24.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/caldav_server_tester/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/caldav_server_tester"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
lint = "ruff check ."
deptry = "deptry src {args}"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (many existing long lines)
    "E721",   # type comparison - existing code uses == for type checks
    "E722",   # bare except (intentional in test code that catches all errors)
    "E731",   # lambda assignment - existing code style
    "F841",   # unused variables (often intentional for documenting API usage)
]

[tool.ruff.lint.isort]
known-first-party = ["caldav_server_tester"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["caldav_server_tester"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.deptry]
ignore = ["DEP002"]  # Dev tools (pytest, ruff, etc.) are not imported in code
